# picachu-models-results-service

./: .gitignore  Makefile  README.md  application.py  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 036006917aef_add_photo_color_table.py  5f94ed25e36f_add_association_tables.py  960adfc527da_add_photo_object_table.py  9f2221ed5f44_add_object_table.py  cfbdf536cc83_add_emotion_tables.py
models_results_service/: config.py
models_results_service/base/: messages_consumer_base.py
models_results_service/config/: rabbitmq_config.py
models_results_service/consumer_base/: consumer_base.py
models_results_service/domain/: __init__.py
models_results_service/domain/associations/: associations.py
models_results_service/domain/data_access_layer/: build_connection_string.py  db.py  engine.py  session.py
models_results_service/domain/emotions/: emotion.py
models_results_service/domain/objects/: object.py
models_results_service/domain/photo_association/: photo_association.py
models_results_service/domain/photo_color/: photo_color.py
models_results_service/domain/photo_emotion/: photo_emotion.py
models_results_service/domain/photo_object/: photo_object.py
models_results_service/modules/associations/: associations_routes.py
models_results_service/modules/colors/: colors_routes.py
models_results_service/modules/emotions/: emotions_routes.py
models_results_service/rabbitmq/: rabbitmq_consumer.py
models_results_service/results_consumer/: results_consumer.py
models_results_service/tests/: conftest.py
(+51 files in other folders)
