[tool.poetry]
name = "PiCachu"
version = "0.1.0"
description = ""
authors = [
    "... <...>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.9"
requests = "2.27.1"
flask = "2.2"
flask-sqlalchemy = "^3.0.2"
flask-migrate = "^3.1.0"
flask-cors = "^3.0.10"
psycopg2-binary = "^2.9.5"
pika = "^1.3.1"
pydantic = "^1.10.4"
pytest = "^7.2.2"
alembic = "^1.10.3"
